<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SystemSettingActivity">


    <!-- 顶部首页栏 -->
    <LinearLayout
        android:id="@+id/topBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/splashscreen_bg"
        android:padding="5dp"
        android:orientation="horizontal">

        <!-- 左侧按钮 -->
        <ImageButton
            android:id="@+id/btn_goback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:paddingLeft="20dp"
            android:paddingTop="40dp"
            android:src="@mipmap/icon_back" />

        <!-- 首页标题 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="设置"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:paddingTop="40dp"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/follow_system"
            android:paddingStart="20dp"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/bt_follow_system"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:paddingEnd="20dp"
            android:src="@mipmap/icon_on"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/dark_mode"
            android:paddingStart="20dp"
            android:textColor="@android:color/darker_gray"
            android:textSize="17sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/bt_dark_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:paddingEnd="20dp"
            android:src="@mipmap/icon_off"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/later_read1"
                android:paddingStart="20dp"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/later_read2"
                android:paddingTop="5dp"
                android:paddingStart="20dp"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />

        </LinearLayout>


        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/bt_later_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:paddingEnd="20dp"
            android:src="@mipmap/icon_on"
            android:layout_gravity="center_vertical" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/read_history1"
                android:paddingStart="20dp"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/read_history2"
                android:paddingStart="20dp"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />

        </LinearLayout>


        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/bt_read_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:paddingEnd="20dp"
            android:src="@mipmap/icon_on"
            android:layout_gravity="center_vertical" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/show_top1"
                android:paddingStart="20dp"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/show_top2"
                android:paddingStart="20dp"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/bt_show_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:paddingEnd="20dp"
            android:src="@mipmap/icon_on"
            android:layout_gravity="center_vertical" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/show_banner1"
                android:paddingStart="20dp"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/show_banner2"
                android:paddingStart="20dp"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/bt_show_banner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:paddingEnd="20dp"
            android:src="@mipmap/icon_on"
            android:layout_gravity="center_vertical" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/hide_author1"
                android:paddingStart="20dp"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/hide_author2"
                android:paddingStart="20dp"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/bt_hide_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:paddingEnd="20dp"
            android:src="@mipmap/icon_off"
            android:layout_gravity="center_vertical" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/hide_project1"
                android:paddingStart="20dp"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/hide_project2"
                android:paddingStart="20dp"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/bt_hide_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:paddingEnd="20dp"
            android:src="@mipmap/icon_off"
            android:layout_gravity="center_vertical" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/slide_back1"
                android:paddingStart="20dp"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/slide_back2"
                android:paddingStart="20dp"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/bt_slide_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:paddingEnd="20dp"
            android:src="@mipmap/icon_on"
            android:layout_gravity="center_vertical" />

    </LinearLayout>


</LinearLayout>