<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    android:background="#ffffff">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        app:titleTextColor="@android:color/transparent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@color/splashscreen_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:text="欢迎使用"
            android:textColor="@color/white"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/tv_go_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="去注册"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:paddingLeft="15dp"
            android:drawablePadding="7dp"
            android:drawableEnd="@mipmap/icon_next2"
            android:textSize="20sp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@android:color/transparent">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher_red_foreground"/>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:background="@drawable/shape_login_form"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="43dp"
            android:paddingRight="31dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@mipmap/account" />

                <EditText
                    android:id="@+id/et_account"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:background="@null"
                    android:hint="@string/account_hint"
                    android:textColor="#000000"
                    android:textColorHint="#bcbcbc"
                    android:textSize="18sp" />
            </LinearLayout>

            <!--添加一条线-->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="23dp"
                android:layout_marginBottom="23dp"
                android:background="#e8e7e7" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@mipmap/pwd" />

                <EditText
                    android:id="@+id/et_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:hint="@string/pwd_hint"
                    android:textColor="#000000"
                    android:textColorHint="#bcbcbc"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="67dp"
            android:layout_marginRight="18dp"
            android:background="@drawable/shape_big_login_btn"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="24sp" />
    </LinearLayout>

</RelativeLayout>